# Stellar-VouchNFT

./: .gitignore  CONTRIBUTING.md  README.md
backend/: Cargo.toml
backend/src/: main.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: VouchBadge.tsx  WalletConnect.tsx
frontend/lib/: api.ts  wallet.ts
